--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
     <main>
         <div class="main1">
             <div class="div1">
-                <img src="./img/img1.png" alt="photo" style="width: 100%;">
+                <img src="./img/img0.1.jpg" alt="photo" style="width: 100px;">
                 <h3 style="color: white;">Naxly as the Winners in Global Agency Awards</h3>
                 <br>
                 <p style="color: white;">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
             </div>
             <div class="div1">
-                <img src="./img/img1.png" alt="photo" style="width: 100%;">
+                <img src="./img/img1.png" alt="photo" style="width: 100px;">
                 <h3 style="color: white;">Naxly as the Winners in Global Agency Awards</h3>
                 <br>
                 <p style="color: white;">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
             </div>
             <div class="div1">
-                <img src="./img/img1.png" alt="photo" style="width: 100%;">
+                <img src="./img/img2.png" alt="photo" style="width: 100px;">
                 <h3 style="color: white;">Naxly as the Winners in Global Agency Awards</h3>
                 <br>
                 <p style="color: white;">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
             </div>
             <div class="div1">
-                <img src="./img/img1.png" alt="photo" style="width: 100%;">
+                <img src="./img/img3.png" alt="photo" style="width: 100px;">
                 <h3 style="color: white;">Naxly as the Winners in Global Agency Awards</h3>
                 <br>
                 <p style="color: white;">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
             </div>
             <div class="div1">
-                <img src="./img/img1.png" alt="photo" style="width: 100%;">
+                <img src="./img/img4.png" alt="photo" style="width: 100px;">
                 <h3 style="color: white;">Naxly as the Winners in Global Agency Awards</h3>
                 <br>
                 <p style="color: white;">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
